v1.3.1 - Pending
	+ Ability to hide progress bar (can create very minimal player)
	+ Retain library path when re-opening Sonata
	+ Shortcut to search library (ctrl-h)
	+ Shortcut to display song info window (f2)
	+ Bug: {} displayed in the Current column title
	+ Bug: Filter + Edit Tags edits another song than selected
	+ Bug: Fix manpage path to be FHS compliant

v1.3 - October 29, 2007
	+ Playlist queue support (requires mpd 0.14 - currently mpd-svn)
	+ Use-configurable columns in playlist by using "|" in prefs > format (xsdnyd)
	+ Switch from SOAPpy to newer ZSI library for lyrics fetching
	+ Use xmms-like search filter by default when user types (no more ctrl-j)
	+ Ctrl-i shortcut to center currently playing song
	+ Use case insensitive sorting for library (holy_robot)
	+ Ignore "the" when sorting library in artist/album views (holy_robot)
	+ Better logic when sorting playlists and new "dir+file" sort option (sed)
	+ Allow saving/overwriting existing playlists and streams
	+ Hidden config options to set browser, hide column headers
	+ Update license to GNU GPLv3
	+ Added Brazilian translation (Alex Tercete Matos)
	+ Added Danish translation (Martin Dybdal)
	+ Bug: Fix nl.po translation causing crash
	+ Bug: Remember playlist position when adding from library
	+ Bug: Fixed tracebacks with certain encodings
	+ Bug: MPD_HOST with password doesn't work on first install
	+ Bug: Fix desktop file to match current XDG standard (nigel)
	+ Bug: Search Amazon artwork using latin1 since it no longer supports utf8
	+ Bug: Possible tag editing issues w/non-latin encoding (requires tagpy 0.93)
	+ Bug: Fix czech translation to use cs.po

v1.2.3 - August 23, 2007
	+ Incorporate disc tag in album sorting (Emmanuel Viaud)
	+ Significantly reduced wakeups/sec according to powertop
	+ Add stream name as a formatting option
	+ Added Italian translation (Gianni Vialetto)
	+ Added Swedish translation (Daniel Nylander)
	+ Added Dutch translation (Olivier)